# Customer-Support-Assistant-Backend-Assessment

./: .dockerignore  .env.docker  .gitignore  Dockerfile  README.md  alembic.ini.base  docker-compose.yml  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: ebdeba95ef43_create_users_and_tickets_tables.py
app/: api.py  config.py  database.py  main.py  models.py  schemas.py
